src/objects/Business_Transaction__c.object
<CustomObject>
    <description>Object created with Flexible Prixing project. Defines upgrade transactions.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer&apos;s salesforce Account link</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Transactions</relationshipLabel>
        <relationshipName>Business_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <description>Defines name of agent executing the transaction or blank when online.</description>
        <inlineHelpText>Defines name of agent executing the transaction or blank when online.</inlineHelpText>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Offers_Names__c</fullName>
        <description>List of Alternative Offer Friendly Names that was emailed to the customer</description>
        <label>Alternative Offers Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Offers__c</fullName>
        <description>List of Alternative Offer Codes that was emailed to the customer</description>
        <label>Alternative Offers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Default blank
If Origin==Online THEN Channel=TCUK
If Origin==Inbound THEN Channel=Contact Centre</description>
        <inlineHelpText>Default blank
If Origin==Online THEN Channel=TCUK
If Origin==Inbound THEN Channel=Contact Centre</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                <fullName>TCUK</fullName>
                </value>
                <value>
                <fullName>Contact Centre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Action__c</fullName>
        <description>Populated for alternative or discretionary price change only, with the date that the transaction was initiated (online/offline) - to be populated by Core API</description>
        <inlineHelpText>Populated for alternative or discretionary price change only, with the date that the transaction was initiated (online/offline)</inlineHelpText>
        <label>Date of Action</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <description>Email template name that was used for notifying the customer</description>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Offer_Code__c</fullName>
        <description>Offer that was on the subscription before the price change occurred</description>
        <label>From Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Offer_Name__c</fullName>
        <description>Friendly Name of the Offer that was on the subscription before the price change occurred</description>
        <label>From Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Subscription__c</fullName>
        <description>Zuora subscription name (ie. A-S00002) of the new subscription. This is text only, not a link</description>
        <label>New Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will indicate that a No Price Change email, potentially with Alternative Offers, was sent to the customer as part of the Price Change process.</description>
        <label>No Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>If BTX Status==Complete THEN Origin=Auto-Renewal
If BTX Status==Alternate AND AgentName is null THEN Origin=Online
If BTX Status==Alternate AND AgentName not null THEN Origin=Inbound
If BTX Status==Discretionary THEN Origin=Inbound</description>
        <inlineHelpText>Defines the origin of the transaction.</inlineHelpText>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                <fullName>Auto-Renewal</fullName>
                </value>
                <value>
                <fullName>Inbound</fullName>
                </value>
                <value>
                <fullName>Outbound</fullName>
                </value>
                <value>
                <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Business Transactions</relationshipLabel>
        <relationshipName>Business_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Change_Date__c</fullName>
        <description>Date the price change is scheduled to occur</description>
        <label>Price Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selected_Offer_Code__c</fullName>
        <description>Text field that will be populated with the Offer Code of either the Alternative Offer or Discretionary Price Change Offer, if either of those processes are invoked</description>
        <label>Selected Offer Code</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Offer_Name__c</fullName>
        <description>Text field that will be populated with the Offer Friendly Name of either the Alternative Offer or Discretionary Price Change Offer, if either of those processes are invoked</description>
        <label>Selected Offer Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>In Progress</fullName>
                </value>
                <value>
                <fullName>Complete</fullName>
                </value>
                <value>
                <fullName>Error</fullName>
                </value>
                <value>
                <fullName>Alternative</fullName>
                </value>
                <value>
                <fullName>Discretionary</fullName>
                </value>
                <value>
                <fullName>Payment Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer&apos;s zsubscription link</description>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Business Transactions</relationshipLabel>
        <relationshipName>Business_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Offer_Code__c</fullName>
        <description>Offer that was on the subscription after the price change occurred. This field does not alter if an Alternative Offer, or a Discretionary Price Change is performed</description>
        <label>To Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Offer_Name__c</fullName>
        <description>Friendly Name of the Offer that was on the subscription after the price change occurred.</description>
        <label>To Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Subscription__c</columns>
        <columns>Plan__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TX-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Transactions</pluralLabel>
    <recordTypes>
        <fullName>Price_Change</fullName>
        <active>true</active>
        <description>Record Type for Price Change</description>
        <label>Price Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAM_Migrate</fullName>
        <active>true</active>
        <description>Record type for SAM accounts migration</description>
        <label>SAM Migrate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>